added changes to nav title, welcome msg, and about section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,7 +27,7 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
             .container
-                a.navbar-brand.js-scroll-trigger(href='#page-top') Start Bootstrap
+                a.navbar-brand.js-scroll-trigger(href='#page-top') Chris's Portflio
                 button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu
                     i.fas.fa-bars
@@ -44,8 +44,7 @@ html(lang='en')
         header.masthead
             .container.d-flex.h-100.align-items-center
                 .mx-auto.text-center
-                    h1.mx-auto.my-0.text-uppercase Grayscale
-                    h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
+                    h1.mx-auto.my-0.text-uppercase Welcome<br/><br/>
                     a.btn.btn-primary.js-scroll-trigger(href='#about') Get Started
 
         // About
@@ -53,12 +52,10 @@ html(lang='en')
             .container
                 .row
                     .col-lg-8.mx-auto
-                        h2.text-white.mb-4 Built with Bootstrap 4
+                        h2.text-white.mb-4 About Me
                         p.text-white-50
-                            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on 
-                            a(href='https://startbootstrap.com/template-overviews/grayscale/') the preview page
-                            | . The theme is open source, and you can use it for any purpose, personal or commercial.
-                img.img-fluid(src='assets/img/ipad.png', alt='')
+                            | I am an aspiring software engineer looking to start up my career. With an intense passion to continue learning what I already have, I am striving to find an enivronment that will test my abilites and further my limits. Learning is a never ending process and I aim to apply what I have into my career.
+                img.img-fluid(src='https://cdn-about.brainpop.com/wp-content/uploads/2018/10/Thumbnail_Coding@3x.png', alt='')
 
         // Projects
         section#projects.projects-section.bg-light
