added to the Projects and Contact sections

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -63,12 +63,15 @@ html(lang='en')
                 // Featured Project Row
                 .row.align-items-center.no-gutters.mb-4.mb-lg-5
                     .col-xl-8.col-lg-7
-                        img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg', alt='')
+                        img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg', alt='' href='https://github.com/akildunne/p3-grocery-store' target="_blank")
+                            //- a(href='https://github.com/akildunne/p3-grocery-store' target="_blank") lets add text and see
                     .col-xl-4.col-lg-5
                         .featured-text.text-center.text-lg-left
                             h4 Shoreline
                             p.text-black-50.mb-0
-                                | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
+                                | "DT's grocery store, come on down and gobble up groceries to your heart's content!"
+                                <br/>
+                                | A react project that I worked on with three other classmates.
                 // Project One Row
                 .row.justify-content-center.no-gutters.mb-5.mb-lg-0
                     .col-lg-6
@@ -115,7 +118,7 @@ html(lang='en')
                                 i.fas.fa-map-marked-alt.text-primary.mb-2
                                 h4.text-uppercase.m-0 Address
                                 hr.my-4
-                                .small.text-black-50 4923 Market Street, Orlando FL
+                                .small.text-black-50 Rahway, NJ
                     .col-md-4.mb-3.mb-md-0
                         .card.py-4.h-100
                             .card-body.text-center
@@ -123,20 +126,22 @@ html(lang='en')
                                 h4.text-uppercase.m-0 Email
                                 hr.my-4
                                 .small.text-black-50
-                                    a(href='#!') hello@yourdomain.com
+                                    a(href='gmail.com/obsidian0504@gmail' target="_blank") obsidian0504@gmail.com
                     .col-md-4.mb-3.mb-md-0
                         .card.py-4.h-100
                             .card-body.text-center
-                                i.fas.fa-mobile-alt.text-primary.mb-2
-                                h4.text-uppercase.m-0 Phone
+                                <i class="fas fa-file-alt"></i>
+                                <br/>
+                                <br/>
+                                h4.text-uppercase.m-0 Resume
                                 hr.my-4
-                                .small.text-black-50 +1 (555) 902-8832
+                                .small.text-black-50 PDF
                 .social.d-flex.justify-content-center
-                    a.mx-2(href='#!')
-                        i.fab.fa-twitter
-                    a.mx-2(href='#!')
+                    a.mx-2(href='https://www.linkedin.com/in/obsidianstudio/' target="_blank")
+                        i.fab.fa-linkedin
+                    a.mx-2(href='https://www.facebook.com/chris.abad.7' target="_blank")
                         i.fab.fa-facebook-f
-                    a.mx-2(href='#!')
+                    a.mx-2(href='https://github.com/Obsidian609/Portfolio' target="_blank")
                         i.fab.fa-github
 
         // Footer
